<resources>
    <string name="app_name">CIS3334-Unit9-Menus-mgoodson1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Email</string>
    <string name="action_sms">SMS</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nav_group_title">Communicate</string>
</resources>
