<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_action_add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="Add" />
        <item
            android:id="@+id/nav_action_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/action_delete" />
        <item
            android:id="@+id/nav_action_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/nav_group_title">
        <menu>
            <item
                android:id="@+id/nav_action_email"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/action_email" />
            <item
                android:id="@+id/nav_action_sms"
                android:icon="@drawable/ic_sms_black_24dp"
                android:title="@string/action_sms" />
        </menu>
    </item>

</menu>
